--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <title>{{ page.title | default: site.defaults.title }}</title>
     <meta content='{{ page.title | default: site.defaults.title }}' name='title'>
     <meta name="description" content="{{ page.description | default: site.defaults.description }}">
-    <meta name="keywords" content="{{ page.keywords | default: site.defaults.keywords }}">
+    <meta name="keywords" content="{{ page.tags | default: site.defaults.tags }}">
     <meta name="author" content="{{ page.author | default: site.defaults.author }}">
     <meta name="robots" content="{{ page.robots | default: site.defaults.robots }}">
     <!-- Facebook Open Graph -->
