--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="{{ page.title | default: site.defaults.title }}">
     <meta property="og:description" content="{{ page.description | default: site.defaults.description }}">
-    <meta property="og:image" content="{{ page.thumbnail | default: site.defaults.thumbnail }}">
+    <meta property="og:image" content="{{ page.image | default: site.defaults.image }}">
     <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <meta property="og:type" content="website">
     <meta content='{{ page.title | default: site.defaults.title }}' property='og:headline'>
@@ -29,7 +29,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ page.title | default: site.defaults.title }}">
     <meta name="twitter:description" content="{{ page.description | default: site.defaults.description }}">
-    <meta name="twitter:image" content="{{ page.thumbnail | default: site.defaults.thumbnail }}">
+    <meta name="twitter:image" content="{{ page.image | default: site.defaults.image }}">
     <!-- PWA -->
     <link href='/assets/icons/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
     <link href='/assets/icons/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
