--- a/_includes/top-info.html
+++ b/_includes/top-info.html
@@ -1,5 +1,5 @@
 <section class='top-info'>
-{% if page.url == '/' %}<img src='{{ page.thumbnail | default: site.defaults.thumbnail }}' alt='{{ page.title | default: site.defaults.title }}' title='{{ page.title | default: site.defaults.title }}'>{% endif %}
+{% if page.url == '/' %}<img src='{{ page.image | default: site.defaults.image }}' alt='{{ page.title | default: site.defaults.title }}' title='{{ page.title | default: site.defaults.title }}'>{% endif %}
 <h1>{{ page.title | default: site.defaults.title }}</h1>
 <p>{{ page.description | default: site.defaults.description }}</p>
 {% if page.url == '/' %}{% include social-links.html %}{% endif %}
