--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,6 @@
 {{ content }}
 </main>
 {% include footer.html %}
-<script>{% include main.js %}</script>
+{% include main.js %}
 </body>
 </html>
