--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -5,7 +5,7 @@
     <link rel="canonical" href="{{ page.url | absolute_url | replace: '/amp/', '/' }}">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{visibility:hidden}</style>
-    <style amp-custom>body{background:#004aad;color:#fff}</style>
+    <style amp-custom>{% include style.css %}</style>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
   </head>
   <body>
