--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html amp>
+<html amp lang="{{ page.lang | default: site.defaults.lang }}">
   <head>
-    <meta charset="utf-8">
-    <link rel="canonical" href="{{ page.url | absolute_url | replace: '/amp/', '/' }}">
-    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    {% include meta.html %}
     <style amp-boilerplate>body{visibility:hidden}</style>
     <style amp-custom>{% include style.css %}</style>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -13,5 +11,7 @@
       <h1>{{ page.title }}</h1>
       {{ content }}
     </article>
+    {% include footer.html %}
+{% include main.js %}
   </body>
 </html>
