--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -7,11 +7,12 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
   </head>
   <body>
+    {% include header.html %}
+    {% include nav.html %}
+    {% include top-info.html %}
     <article>
-      <h1>{{ page.title }}</h1>
       {{ content }}
     </article>
     {% include footer.html %}
-{% include main.js %}
   </body>
 </html>
