--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -14,6 +14,6 @@
     <article>
       {{ content }}
     </article>
-    {% include footer_amp.html %}
+    {% include footer.html %}
   </body>
 </html>
