--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,13 +1,10 @@
 ---
 layout: default
 ---
-
-<h1>{{ page.title }}</h1>
-
 <ul>
   {% for post in page.posts %}
     <li>
-      <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      <a href="{{ post.url | relative_url }}" title='{{ post.title }}'>{{ post.title }}</a>
       <small>{{ post.date | date: "%b %d, %Y" }}</small>
     </li>
   {% endfor %}
