--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
-<footer>
-    <div>
+<footer aria-label='Credit Section' class='full-width-wrapper credit-wrapper hide-on-print' id='credit-wrapper' itemtype='https://www.schema.org/WPFooter'>
+    <meta content='#credit-wrapper' itemprop='cssSelector'>
+    <div class='marquee'>
         <a href='https://www.dmca.com/Protection/Status.aspx?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21&refurl={{ page.url | absolute_url }}' target='nofollow noopener' title='DMCA.com Protection Status'>
             {% if page.url contains '/amp/' %}<amp-img src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21'  width='121' height='57' loading='lazy' alt='DMCA.com Protection Status' title='DMCA.com Protection Status' layout='fixed' aria-label='DMCA Protection Badge'></amp-img>{% else %}<img src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21'  width='121' height='57' loading='lazy' alt='DMCA.com Protection Status' title='DMCA.com Protection Status' aria-label='DMCA Protection Badge'>{% endif %}
         </a>
     </div>
-    <p>Dibuat dengan ❤️ oleh <a href='{{ site.url }}' title='{{ site.title }}'>{{ site.author }}</a></p>
-    <p>2022-{{ site.time | date: "%Y" }} &copy; Hak Cipta Dilindungi.</p>
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"WPFooter","url":"{{ site.url }}{{ page.url | relative_url }}","copyrightHolder":{"@type":"Organization","name":"{{ site.title }}","url":"{{ site.url }}"},"copyrightYear":"{{ site.time | date: '%Y' }}","publisher":{"@type":"Organization","name":"{{ site.title }}","logo":{"@type":"ImageObject","url":"{{ site.url }}/assets/img/ASIBUKA-Blue.png"}}}</script>
+    <p>Dibuat dengan ❤️ oleh <a href='{{ site.url }}' itemprop='url' title='{{ site.title }}'><span itemprop='copyrightHolder name alternateName publisher'>{{ site.author }}</span></a></p>
+    <p><span itemprop='copyrightYear'></span>2023</span>-{{ site.time | date: "%Y" }} &copy; <span itemprop='copyrightNotice'>Hak Cipta Dilindungi.</span></p>
 </footer>
