edit social links

--- a/_includes/top-info.html
+++ b/_includes/top-info.html
@@ -2,6 +2,6 @@
 {% if page.url == '/' %}<img src='{{ page.image | default: site.defaults.image }}' alt='{{ page.title | default: site.defaults.title }}' title='{{ page.title | default: site.defaults.title }}'>{% endif %}
 <h1>{{ page.title | default: site.defaults.title }}</h1>
 <p>{{ page.description | default: site.defaults.description }}</p>
-{% if page.url == '/' %}{% include social-links.html %}{% endif %}
+{% if page.url == '/' or page.url == '/amp/' %}{% include social-links.html %}{% endif %}
 {% if page.collection == 'posts' %}<p class='post-label'><svg viewBox='0 0 24 24'><path d='M19 7.001c0 3.865-3.134 7-7 7s-7-3.135-7-7c0-3.867 3.134-7.001 7-7.001s7 3.134 7 7.001zm-1.598 7.18c-1.506 1.137-3.374 1.82-5.402 1.82-2.03 0-3.899-.685-5.407-1.822-4.072 1.793-6.593 7.376-6.593 9.821h24c0-2.423-2.6-8.006-6.598-9.819z'></path></svg> {{ page.author | default: site.defaults.author }}</p>{% endif %}
 </section>
