edit leaderboard ads section

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -52,5 +52,5 @@
     <!-- Verification -->
     <meta name='dmca-site-verification' content='OWJ0Vk5lWTVjNzRLMWxFcis4NythQT090'>
     <!-- Canonical -->
-    <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">{% unless page.url contains '/amp/' %}<link rel='amphtml' href="{{ site.url }}{{ page.url | replace:'index.html','' }}/amp/">{% endunless %}
+    <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">{% unless page.url contains '/amp/' %}<link rel='amphtml' href="{{ site.url }}{{ page.url | replace:'index.html','' }}amp/">{% endunless %}
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
