--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,11 @@
     }
     </script>
 </head>
-<body>
+<body class="light-mode">
 {% include header.html %}
 {% include nav.html %}
 {% include top-info.html %}
-<div itemscope itemtype='https://schema.org/WPAdblock' class='ads'><ins style='display:block' class="adsbygoogle" data-ad-client="ca-pub-4951061355072034" data-ad-slot="4462286938" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
+{% include leaderboard_ads.html %}
 <main>
 {{ content }}
 </main>
