--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -12,6 +12,7 @@
     {% include header.html %}
     {% include nav.html %}
     {% include top-info.html %}
+    {% include leaderboard_ads.html %}
     <article>
       {{ content }}
     </article>
