--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -28,6 +28,16 @@
     <meta name="twitter:description" content="{{ page.description | default: site.defaults.description }}">
     <meta name="twitter:image" content="{{ page.image | default: site.defaults.image }}">
     <!-- PWA -->
+    <meta content='/' name='msapplication-starturl'>
+    <meta content='yes' name='mobile-web-app-capable'>
+    <meta content='yes' name='apple-mobile-web-app-capable'>
+    <meta content='ASIBUKA Group' name='application-name'>
+    <meta content='ASIBUKA Group' name='msapplication-tooltip'>
+    <meta content='ASIBUKA Group' name='apple-mobile-web-app-title'>
+    <meta content='#004AAD' name='theme-color'>
+    <meta content='#004AAD' name='msapplication-TileColor'>
+    <meta content='#004AAD' name='msapplication-navbutton-color'>
+    <meta content='#004AAD' name='apple-mobile-web-app-status-bar-style'>
     <link href='/assets/icons/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
     <link href='/assets/icons/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
     <link href='/assets/icons/apple-icon-72x72.png' rel='apple-touch-icon' sizes='72x72'>
@@ -42,13 +52,11 @@
     <link href='/assets/icons/favicon-96x96.png' rel='icon' sizes='96x96' type='image/png'>
     <link href='/assets/icons/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'>
     <link href='/manifest.json' rel='manifest'>
+    <!-- Feeds -->
     <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ site.url }}/sitemap.xml">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ site.url }}/feed.xml">
     <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="{{ site.url }}/rss.xml">
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{ site.url }}/atom.xml">
-    <meta content='#004aad' name='msapplication-TileColor'>
-    <meta content='/assets/icons/ms-icon-144x144.png' name='msapplication-TileImage'>
-    <meta content='#004aad' name='theme-color'>
     <!-- Verification -->
     <meta name='dmca-site-verification' content='OWJ0Vk5lWTVjNzRLMWxFcis4NythQT090'>
     <!-- Canonical -->
