--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -13,9 +13,9 @@
     {% include nav.html %}
     {% include top-info.html %}
     {% include leaderboard_ads.html %}
-    <article>
+    <main>
       {{ content }}
-    </article>
+    </main>
     {% include footer.html %}
   </body>
 </html>
