--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 {% include top-info.html %}
 {% include leaderboard_ads.html %}
 <main>
-{{ content }}
+  {% include blogpost.html %}{{ content }}
 </main>
 {% include footer.html %}
 {% include main.js %}
