--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,30 +1,38 @@
 :root{
-    
+--font:normal normal 1rem Arial,Helvetica, sans-serif;
+--theme-color:#004aad;
+--theme-color-dark:#012345;
+--white:#fff;
+--black:#000;
+--grey:#636363;
+--darkgrey:#141414;
+--gold:#EFBF04;
 }
 /* CSS Reset */
 html{transition:.3s ease-in-out;line-height:1.5;scroll-behavior:smooth;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
 ::-webkit-scrollbar{width:10px;height:10px}
-::-webkit-scrollbar-thumb{background-color:#004AAD;border:.05em solid #004AAD;background-clip:padding-box;cursor:pointer;border-radius:8px;-webkit-border-radius:8px}
-::-webkit-scrollbar-track{background-color:#000000}
-::selection{background-color:#004AAD;color:#fff}
+::-webkit-scrollbar-thumb{background-color:var(--theme-color);border:.05em solid var(--theme-color);background-clip:padding-box;cursor:pointer;border-radius:8px;-webkit-border-radius:8px}
+::-webkit-scrollbar-track{background-color:var(--darkgrey)}
+::selection{background-color:var(--theme-color);color:var(--white)}
 [hidden]{display:none}
 .ads{margin:1rem auto;text-align:center}
 /* Body */
-body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;margin:0 auto}
-body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
+body{font:var(--font);background-color:var(--white);color:var(--black);margin:0 auto}
+body.dark-mode{background-color:var(--darkgrey);color:var(--white)}
 /* A (Hyperlink) */
-a{background-color:transparent;-webkit-text-decoration-skip:objects;text-decoration:none;font-weight:600;color:#012345}
-body.dark-mode a{color:#ffffff}
-a:hover,a:focus,body.darkmode a:hover,body.darkmode a:focus{color:#012345}
+a{background-color:transparent;-webkit-text-decoration-skip:objects;text-decoration:none;font-weight:600;color:var(--theme-color)}
+body.dark-mode a{color:var(--white)}
+a:hover,a:focus,body.darkmode a:hover,body.darkmode a:focus{color:var(--grey)}
 /* Article */
 article{margin:auto .5rem}
 /* Floating Header Navbar */
-.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;width:100%;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:2;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
-.hamburger-menu{font-size:24px;color:#fff;background:none;border:none;cursor:pointer;margin-left:1rem}
-.brand-name{position:absolute;left:50%;transform:translateX(-50%);font-size:18px;font-weight:700;color:#fff;text-decoration:none;white-space:nowrap;text-transform:uppercase}
-.brand-name a{color:#fff;text-decoration:none}
-#dark-mode-toggle{font-size:24px;color:#fff;cursor:pointer;transition:.3s;margin-right:1rem}
-#dark-mode-toggle:hover{color:#ff0}
+.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;width:100%;background:var(--theme-color);padding:1rem 0;box-shadow:0 4px 10px var(--darkgrey);z-index:2;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:uppercase}
+.dark-mode .floating-navbar{background:var(--theme-color-dark)}
+.hamburger-menu{font-size:24px;color:var(--white);background:none;border:none;cursor:pointer;margin-left:1rem}
+.brand-name{position:absolute;left:50%;transform:translateX(-50%);font-size:18px;font-weight:700;color:var(--white);text-decoration:none;white-space:nowrap}
+.brand-name a{color:var(--white);text-decoration:none}
+#dark-mode-toggle{font-size:24px;color:var(--white);cursor:pointer;transition:.3s;margin-right:1rem}
+#dark-mode-toggle:hover{color:var(--gold)}
 @media (max-width: 768px) {
 .floating-navbar{padding:12px 0}
 }
@@ -69,7 +77,9 @@ body.dark-mode .top-info p{color:#ddd}
 body.dark-mode .social-links a{background-color:#222}
 body.dark-mode .social-links a:hover{background-color:#444;color:#fff}
 /* Footer */
-footer{background:#333;color:#fff;text-align:center;padding:1rem 0;margin:0 auto;transition:.3s ease-in-out}footer a{text-decoration:none;font-weight:700;color:#fff}
+.credit-wrapper{background:linear-gradient(to bottom,var(--theme-color),rgba(0,0,0,0.9));color:var(--white);text-align:center;padding:1rem 0}
+body.dark-mode .credit-wrapper{background:linear-gradient(to bottom,var(--theme-color-dark),rgba(0,0,0,0.8))}
+.credit-wrapper a{color:var(--white)}
 {% if content contains "<table" %}.table-container{overflow-x:auto}table{border-collapse:collapse;width:100%;background-color:#fff;color:#333}th,td{text-align:left;padding:12px;border-bottom:1px solid #ddd}th{background-color:#007bff;color:#fff}tr:nth-child(even){background-color:#f8f9fa}.dark-mode table{background-color:#1e1e1e;color:#f5f5f5}.dark-mode th{background-color:#0056b3;color:#fff}.dark-mode tr:nth-child(even){background-color:#2c2c2c} {% endif %}
 {% if content contains "<h2" %}.toc{background:#f8f9fa;padding:15px;border-left:4px solid #004aad;margin-bottom:20px;transition:background 0.3s,color .3s}.toc h2{font-size:1.2rem;margin-bottom:10px}.toc ul{list-style:none;padding-left:15px}.toc ul li{margin-bottom:5px}.toc ul ul{padding-left:15px;font-size:.9rem}.dark-mode .toc{background:#1e1e1e;color:#f8f9fa;border-left:4px solid #0af}.dark-mode .toc h2{color:#f8f9fa}.dark-mode .toc ul li{color:#ddd}.dark-mode .toc a{color:#0af}.dark-mode .toc a:hover{color:#fa0}{% endif %}
 {% if page.collection == "posts" %}.post-label{color:#1e1e1e;font-weight:bold;margin:.5rem auto}.dark-mode .post-label{color:#fff}.post-label svg{width:1rem;height:1rem}.post-label svg path{fill:#1e1e1e}.dark-mode .post-label svg path{fill:#fff}{% endif %}
