--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <input type='checkbox' hidden id='sidebar-toggle'>
-<nav itemscope itemtype='https://schema.org/SiteNavigationElement' aria-label='Sidebar Menu' class='page-wrapper'>
+<nav itemscope itemtype='https://schema.org/SiteNavigationElement' aria-label='Sidebar Menu' class='page-wrapper hide-on-print'>
     <div class='sidebar-container'>
       <div class='sidebar'>
         <label for='sidebar-toggle' class='close'>&times;</label>
