--- a/_includes/top-info.html
+++ b/_includes/top-info.html
@@ -1,4 +1,4 @@
-<section class='top-info'>
+<section class='top-info hide-on-print'>
 {% if page.url == '/' %}<img src='{{ page.image | default: site.defaults.image }}' alt='{{ page.title | default: site.defaults.title }}' title='{{ page.title | default: site.defaults.title }}'>{% endif %}
 <h1>{{ page.title | default: site.defaults.title }}</h1>
 <p>{{ page.description | default: site.defaults.description }}</p>
