--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="floating-navbar" itemscope itemtype="https://schema.org/WPHeader">
+<header class="floating-navbar hide-on-print" itemscope itemtype="https://schema.org/WPHeader">
     <label for="sidebar-toggle" class="hamburger-menu">&#9776;</label>
     <div class="brand-name" itemscope itemtype="https://schema.org/Organization">
         <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url">
