--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     }
     </script>
 </head>
-<body class="light-mode">
+<body class="light-mode hide-on-print">
 {% include header.html %}
 {% include nav.html %}
 {% include top-info.html %}
