--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 {% include nav.html %}
 {% include top-info.html %}
 {% include leaderboard_ads.html %}
-{% include custom_title.html title="Tautan Penting" %}
+{% include custom-title.html title="Tautan Penting" %}
 <main>
 {{ content }}
 </main>
