--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     }
     </script>
 </head>
-<body class="light-mode hide-on-print">
+<body class="light-mode">
 {% include header.html %}
 {% include nav.html %}
 {% include top-info.html %}
@@ -23,7 +23,7 @@
 {{ content }}
 </main>
 {% include footer.html %}
-{% include noprint.html %}
 {% include main.js %}
 </body>
+{% include noprint.html %}
 </html>
