--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb">
+<nav aria-label="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb hide-on-print">
     <!-- Position 1: Home -->
     <span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
       <a itemprop="item" href="{{ "/" | absolute_url }}">
