--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,7 @@
 {% if page.url contains '/amp/' %}
 <amp-iframe width="600" height="400" sandbox="allow-scripts allow-same-origin" layout="responsive" frameborder="0" src="/comments.html"></amp-iframe>
 {% else %}
-<div id='disqus_thread'></div>
+<div id='disqus_thread' class="hide-on-print"></div>
 <script>
 var disqus_config = function () {
   this.page.url = '{{ page.url | absolute_url }}';
