--- a/_includes/sitemap.html
+++ b/_includes/sitemap.html
@@ -1,5 +1,5 @@
 <input type="text" id="filterSitemap" onkeyup="filterSitemap()" placeholder="Search...">
-<div class='table-container'><table id='sitemap'><thead><tr><th>#</th><th>Judul</th><th>Penulis</th><th>Tanggal</th><th>Kategori</th><th>Tags</th></tr></thead><tbody>{% assign counter = 1 %}{% for post in site.posts %}<tr><td>{{ counter }}</td><td><a href='{{ post.url }}' title='{{ post.title }}'>{{ post.title }}</a></td><td>{{ post.author | default: "Unknown" }}</td><td>{{ post.date | date: "%B %d, %Y" }}</td><td>{{ post.categories | join: ", " }}</td><td>{{ post.tags | join: ", " }}</td></tr>{% assign counter = counter | plus: 1 %}{% endfor %}</tbody></table></div>
+<div class='table-container hide-on-print'><table id='sitemap'><thead><tr><th>#</th><th>Judul</th><th>Penulis</th><th>Tanggal</th><th>Kategori</th><th>Tags</th></tr></thead><tbody>{% assign counter = 1 %}{% for post in site.posts %}<tr><td>{{ counter }}</td><td><a href='{{ post.url }}' title='{{ post.title }}'>{{ post.title }}</a></td><td>{{ post.author | default: "Unknown" }}</td><td>{{ post.date | date: "%B %d, %Y" }}</td><td>{{ post.categories | join: ", " }}</td><td>{{ post.tags | join: ", " }}</td></tr>{% assign counter = counter | plus: 1 %}{% endfor %}</tbody></table></div>
 <script>
 function filterSitemap() {
   var input, filter, table, tr, td, i, j, txtValue;
