edit floating navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,16 @@
 <header class="floating-navbar hide-on-print" itemscope itemtype="https://schema.org/WPHeader">
     <label for="sidebar-toggle" class="hamburger-menu">&#9776;</label>
+  
     <div class="brand-name" itemscope itemtype="https://schema.org/Organization">
-        <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url">
-            <span itemprop="name">ASIBUKA Group</span>
-        </a>
+      <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url">
+        <span itemprop="name">ASIBUKA Group</span>
+      </a>
     </div>
-    <span id="dark-mode-toggle">🌙</span>
-</header>
+  
+    <div class="navbar-icons">
+      <span class="icon-button" id="search-toggle" title="Search">🔍</span>
+      <span class="icon-button" id="bookmark-toggle" title="Bookmarks">🔖</span>
+      <span class="icon-button" id="dark-mode-toggle" title="Toggle dark mode">🌙</span>
+    </div>
+  </header>
+  
