--- a/_includes/style.css
+++ b/_includes/style.css
@@ -26,7 +26,7 @@ body.dark-mode{background-color:var(--darkgrey);color:var(--white)}
 /* A (Hyperlink) */
 a{background-color:transparent;-webkit-text-decoration-skip:objects;text-decoration:none;font-weight:600;color:var(--theme-color)}
 body.dark-mode a{color:var(--white)}
-a:hover,a:focus,body.darkmode a:hover,body.darkmode a:focus{color:var(--grey)}
+a:hover,a:focus,body.dark-mode a:hover,body.dark-mode a:focus{color:var(--grey)}
 /* Article */
 article{margin:auto .5rem}
 /* Floating Header Navbar */
@@ -85,12 +85,15 @@ body.dark-mode .social-links a:hover{background-color:#444;color:#fff}
 .credit-wrapper{background:linear-gradient(to bottom,var(--theme-color),rgba(0,0,0,0.9));color:var(--white);text-align:center;padding:1rem 0}
 body.dark-mode .credit-wrapper{background:linear-gradient(to bottom,var(--theme-color-dark),rgba(0,0,0,0.8))}
 .credit-wrapper a{color:var(--white)}
+{% if content contains "class='badge-slider" %}.badge-slider{background:var(--theme-color);overflow:hidden}
+body.dark-mode .badge-slider{background:var(--theme-color-dark)}
+.badges{display:flex;height:100px;align-content:center;align-items:center;flex-flow:row nowrap;animation:marqueeLeftToRight 15s linear infinite}
+.badges:hover,.badges:focus{animation-play-state:paused}
+.badges .badge{width:100px;text-align:center;margin:1rem;flex-shrink:0}
+{% if page.url contains '/amp/' %}.badges .badge amp-img{% else %}.badges .badge img{% endif %}{max-width:100%;height:auto}{% endif %}
 {% if content contains "<table" %}.table-container{overflow-x:auto}table{border-collapse:collapse;width:100%;background-color:#fff;color:#333}th,td{text-align:left;padding:12px;border-bottom:1px solid #ddd}th{background-color:#007bff;color:#fff}tr:nth-child(even){background-color:#f8f9fa}.dark-mode table{background-color:#1e1e1e;color:#f5f5f5}.dark-mode th{background-color:#0056b3;color:#fff}.dark-mode tr:nth-child(even){background-color:#2c2c2c} {% endif %}
 {% if content contains "<h2" %}.toc{background:#f8f9fa;padding:15px;border-left:4px solid #004aad;margin-bottom:20px;transition:background 0.3s,color .3s}.toc h2{font-size:1.2rem;margin-bottom:10px}.toc ul{list-style:none;padding-left:15px}.toc ul li{margin-bottom:5px}.toc ul ul{padding-left:15px;font-size:.9rem}.dark-mode .toc{background:#1e1e1e;color:#f8f9fa;border-left:4px solid #0af}.dark-mode .toc h2{color:#f8f9fa}.dark-mode .toc ul li{color:#ddd}.dark-mode .toc a{color:#0af}.dark-mode .toc a:hover{color:#fa0}{% endif %}
 {% if page.collection == "posts" %}.post-label{color:#1e1e1e;font-weight:bold;margin:.5rem auto}.dark-mode .post-label{color:#fff}.post-label svg{width:1rem;height:1rem}.post-label svg path{fill:#1e1e1e}.dark-mode .post-label svg path{fill:#fff}{% endif %}
 .breadcrumb{font-size:.95rem;background-color:#f8f9fa;padding:10px 15px;border-radius:8px;margin-bottom:1rem;display:flex;flex-wrap:wrap;align-items:center;color:#333}.breadcrumb a{text-decoration:none;color:#004aad;font-weight:500}.breadcrumb a:hover{text-decoration:underline}.breadcrumb span[itemprop="itemListElement"] + span[itemprop="itemListElement"]::before{content:"›";margin:0 .5em;color:#888}.dark-mode .breadcrumb{background-color:#1e1e1e;color:#ccc}.dark-mode .breadcrumb a{color:#4da3ff}
 {% if content contains "custom-title" %}.custom-title{text-align:center;font-weight:bold;position:relative;margin:1rem auto}.custom-title:before{background:var(--black);z-index:1;content:'';width:100%;height:5px;position:absolute;top:50%;left:0;margin-top:-1px}body.dark-mode .custom-title:before{background:var(--white)}.custom-title .title{color:var(--black);background:var(--white);border:5px solid var(--black);display:inline-block;margin:0;text-transform:uppercase;z-index:1;position:relative;padding:.5rem 1rem;border-radius:18px;font-size:1.1rem}body.dark-mode .custom-title .title{color:var(--white);background:var(--black);border:5px solid var(--white)}{% endif %}
-@media print{
-    .hide-on-print{display:none}
-    #noprint{display:block}
-}
+@media print{.hide-on-print{display:none}#noprint{display:block}}
