--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer aria-label='Credit Section' class='full-width-wrapper credit-wrapper hide-on-print' id='credit-wrapper' itemtype='https://www.schema.org/WPFooter'>
     <meta content='#credit-wrapper' itemprop='cssSelector'>
-    <div class='badge-slider hide-on-print'>
+    <div class="badge-slider hide-on-print">
         <div class="badges">
             <div class="badge">
                 <a href='https://www.dmca.com/Protection/Status.aspx?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21&refurl={{ page.url | absolute_url }}' target='nofollow noopener noreferrer license' title='DMCA.com Protection Status'>
