--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
             </div>
             <div class="badge">
                 <a href='https://search.google.com/test/amp?url={{ page.url | absolute_url | append: "amp/"}}' target='nofollow noopener noreferrer' title='PageSpeed Insight Test Result'>
-                    {% if page.is_amp %}<amp-img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi36KmgpB1ofrsc99DLL0nJxyeOKE-I4JRFXj6xJG2Thnf8XGE9xYoP7PeP7Mr9XRHCXrdwuF6EnhfQ0cSTzM7NjsiU6HadeBX0BjabMwmyy2KjJCnPsuGOQbpGxR7QPeVSQ1dUXciUfInKsm2YTzN2PPg3_WDuW4mB6Zf3fiOECA1dhLYXxZo27Nfb0cNT/s100-rw/valid-amphtml.png'  width='121' height='57' loading='lazy' alt='AMP Validator' title='AMP Validator' layout='fixed'></amp-img>{% else %}<img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRVtjrjS6D_9yoDu34yrALEmffGq5KTApJGFhSZlAqhYyyP-3G1QsWrNpc-suIs2kiB_H9Mjfzwp8xdFDDyRSIh3sPMmTRtWJGytfA4FQ1z3RnT9kKOUFFrB3wDgDXgMjAwWPOHGMLO2Ejiwdt7HfjhsqZ7tLPE83KTs-RuPmIsZv6DKpyEKFQoEh-H8fh/s100-rw/pagespeed-tested.png'  width='121' height='57' loading='lazy' alt='AMP Validator' title='AMP Validator'>{% endif %}
+                    {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi36KmgpB1ofrsc99DLL0nJxyeOKE-I4JRFXj6xJG2Thnf8XGE9xYoP7PeP7Mr9XRHCXrdwuF6EnhfQ0cSTzM7NjsiU6HadeBX0BjabMwmyy2KjJCnPsuGOQbpGxR7QPeVSQ1dUXciUfInKsm2YTzN2PPg3_WDuW4mB6Zf3fiOECA1dhLYXxZo27Nfb0cNT/s100-rw/valid-amphtml.png' title='AMP Validator' width='121' height='57' layout='fixed' %}
                 </a>
             </div>
         </div>
