--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
         <div class="badges">
             <div class="badge">
                 <a href='https://www.dmca.com/Protection/Status.aspx?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21&refurl={{ page.url | absolute_url }}' target='_blank' rel='nofollow noopener noreferrer license' title='DMCA.com Protection Status'>
-                    {% if page.is_amp %}<amp-img src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21'  width='121' height='57' loading='lazy' alt='DMCA.com Protection Status' title='DMCA.com Protection Status' layout='fixed'></amp-img>{% else %}<img src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21'  width='121' height='57' loading='lazy' alt='DMCA.com Protection Status' title='DMCA.com Protection Status'>{% endif %}
+                    {% include image.html src='https://images.dmca.com/Badges/dmca_protected_26_120.png?ID=aef4ea29-df6f-425f-a92f-c9e401fe0f21' title='DMCA.com Protection Status' width='121' height='57' layout='fixed' %}
                 </a>
             </div>
             <div class="badge">
                 <a href='https://pagespeed.web.dev/analysis?url={{ page.url | absolute_url }}' target='_blank' rel='nofollow noopener noreferrer' title='label="PageSpeed Insight Test Result'>
-                    {% if page.is_amp %}<amp-img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRVtjrjS6D_9yoDu34yrALEmffGq5KTApJGFhSZlAqhYyyP-3G1QsWrNpc-suIs2kiB_H9Mjfzwp8xdFDDyRSIh3sPMmTRtWJGytfA4FQ1z3RnT9kKOUFFrB3wDgDXgMjAwWPOHGMLO2Ejiwdt7HfjhsqZ7tLPE83KTs-RuPmIsZv6DKpyEKFQoEh-H8fh/s100-rw/pagespeed-tested.png'  width='121' height='57' loading='lazy' alt='Pagespeed Insight' title='Pagespeed Insight' layout='fixed'></amp-img>{% else %}<img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRVtjrjS6D_9yoDu34yrALEmffGq5KTApJGFhSZlAqhYyyP-3G1QsWrNpc-suIs2kiB_H9Mjfzwp8xdFDDyRSIh3sPMmTRtWJGytfA4FQ1z3RnT9kKOUFFrB3wDgDXgMjAwWPOHGMLO2Ejiwdt7HfjhsqZ7tLPE83KTs-RuPmIsZv6DKpyEKFQoEh-H8fh/s100-rw/pagespeed-tested.png'  width='121' height='57' loading='lazy' alt='Pagespeed Insight' title='Pagespeed Insight'>{% endif %}
+                    {% include image.html src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRVtjrjS6D_9yoDu34yrALEmffGq5KTApJGFhSZlAqhYyyP-3G1QsWrNpc-suIs2kiB_H9Mjfzwp8xdFDDyRSIh3sPMmTRtWJGytfA4FQ1z3RnT9kKOUFFrB3wDgDXgMjAwWPOHGMLO2Ejiwdt7HfjhsqZ7tLPE83KTs-RuPmIsZv6DKpyEKFQoEh-H8fh/s100-rw/pagespeed-tested.png' title='Pagespeed Insight' width='121' height='57' layout='fixed' %}
                 </a>
             </div>
             <div class="badge">
