--- a/_includes/style.css
+++ b/_includes/style.css
@@ -51,21 +51,17 @@ article{margin:auto .5rem}
 #sidebar-toggle:checked ~ .page-wrapper{overflow:hidden}
 .sidebar-container{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:4}
 #sidebar-toggle:checked ~ .page-wrapper .sidebar-container{pointer-events:auto}
-.sidebar{position:fixed;top:0;left:-290px;width:250px;z-index:5;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding:60px 20px 20px;box-shadow:2px 0 10px #0000004d;overflow-y:auto;text-align:center;pointer-events:auto}
-.sidebar h2{margin:0 0 20px;font-size:1.5rem;font-weight:700;text-transform:uppercase;letter-spacing:1px;padding:10px;border-bottom:2px solid #ffffff80}
-.sidebar .close{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:#fff;cursor:pointer}
+.sidebar{position:fixed;top:0;left:-290px;width:250px;z-index:5;height:100%;background:var(--theme-color);color:var(--white);transition:left .3s ease-in-out;padding:60px 20px 20px;box-shadow:2px 0 10px var(--black);overflow-y:auto;text-align:center;pointer-events:auto}
+body.dark-mode .sidebar{background:var(--theme-color-dark)}
+.sidebar h2{margin:0 0 20px;font-size:1.5rem;font-weight:700;text-transform:uppercase;letter-spacing:1px;padding:10px;border-bottom:2px solid var(--grey)}
+.sidebar .close{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:var(--white);cursor:pointer}
 .sidebar ul{list-style:none;padding:0}
 .sidebar li{padding:15px}
-.sidebar a{color:#fff;text-decoration:none;display:block;padding:10px;border-radius:5px;transition:background .3s}
-.sidebar a:hover{background:var(--grey)}
-.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden}
+.sidebar a{color:var(--white);text-decoration:none;display:block;padding:10px;border-radius:5px;transition:background .3s}
+.sidebar a:hover{background:rgba(0, 0, 0, 0.3)}
+.overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:var(--black);opacity:0;visibility:hidden}
 #sidebar-toggle:checked ~ .page-wrapper .sidebar{left:0}
 #sidebar-toggle:checked ~ .page-wrapper .overlay{opacity:1;visibility:visible}
-@media (max-width: 400px) {
-.sidebar{width:75%;left:-120%}
-#sidebar-toggle:checked ~ .page-wrapper .sidebar{left:0}
-.sidebar h2{font-size:1.3rem}
-}
 /* Top Info */
 .top-info{text-align:center;margin-top:100px;text-align:center;position:relative;padding-bottom:20px;margin-bottom:30px}
 .top-info img{width:120px;height:120px;border-radius:50%;object-fit:cover;border:3px solid #004AAD;transition:.3s ease-in-out}
@@ -103,4 +99,7 @@ body.dark-mode .credit-wrapper{background:linear-gradient(to bottom,var(--theme-
 }
 @media screen and (max-width:520px){
     .two-columns-wrapper .two-columns-widget,.three-columns-wrapper .three-columns-widget,.four-columns-wrapper .four-columns-widget{flex:0 0 calc(100% - 1rem);padding:.5rem}
+    .sidebar{width:75%;left:-120%}
+    #sidebar-toggle:checked ~ .page-wrapper .sidebar{left:0}
+    .sidebar h2{font-size:1.3rem}
 }
