--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -14,7 +14,7 @@
     {% include nav.html %}
     {% include top-info.html %}
     {% include leaderboard_ads.html %}
-    <main>
+    <main aria-label="Content Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
       {{ content }}
     </main>
     {% include footer.html %}
